welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: not found: type int
  var T = new Array[int] (num) 
                    ^